2009-06-09  Olivier Stasse  <olivier.stasse@aist.go.jp>

	HumanoidDynamicMultiBody augmented with HRPSpecificities interface.
	* include/dynamicsJRLJapan/HumanoidDynamicMultiBody.h:
	Adding HRPSpecificities interface.
	* src/HumanoidDynamicMultiBody.cpp: 
	Calling m_HS.

2009-06-04  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding a new method for optimized code in hrp2dynamics.
	* include/dynamicsJRLJapan/DynamicMultiBody.h: 
	Adding access to inertiaMatrix.
	* src/DynamicMultiBody.cpp: .

2009-06-04  Olivier Stasse  <olivier.stasse@aist.go.jp>

	License is send back to file License.txt.
	* include/dynamicsJRLJapan/Body.h: .
	* include/dynamicsJRLJapan/DynamicBody.h: .
	* include/dynamicsJRLJapan/Hand.h: .
	* include/dynamicsJRLJapan/HumanoidDynamicMultiBody.h: .
	* include/dynamicsJRLJapan/HumanoidSpecificities.h: .
	* include/dynamicsJRLJapan/Joint.h: .
	* include/dynamicsJRLJapan/MultiBody.h: .
	* include/dynamicsJRLJapan/SpiritVRMLReader.h: .
	* include/dynamicsJRLJapan/fileReader.h: .
	* src/Body.cpp: .
	* src/CMakeLists.txt: .
	* src/DynamicBody.cpp: .
	* src/Hand.cpp: .
	* src/HumanoidDynamicMultiBody.cpp: .
	* src/HumanoidSpecificities.cpp: .
	* src/Joint.cpp: .
	* src/MultiBody.cpp: .
	* src/SpiritVRMLReader.cpp: .
	* src/fileReader.cpp: .

2009-05-08  Florent Lamiraux  <florent@laas.fr>

	Release 1.14.
	* CMakeLists.txt: Upgrade package version and dependencies.

2009-04-30  Olivier Stasse  <olivier.stasse@aist.go.jp>

	[unitTesting] Reinforce T3d compatibility.
	* ChangeLog: .
	* unitTesting/TestCopyJointTreeThroughAbstractInterface.cpp: 
	access compatiable with t3d.
	* unitTesting/TestHumanoidDynamicRobot.cpp: 
	access compatible with t3d.
	* unitTesting/TestHumanoidDynamicRobotglut.cpp: 
	access compatible with t3d.

2009-04-30  Olivier Stasse  <olivier.stasse@aist.go.jp>

	[unitTesting] T3D compatibility.
	* unitTesting/Test2Models.cpp: Removed call to << operator
	not supported in t3d.

2009-04-30  Olivier Stasse  <olivier.stasse@aist.go.jp>
