@@ -1,5 +1,17 @@
 2009-06-09  Olivier Stasse  <olivier.stasse@aist.go.jp>
 
+	Adding Inverse Kinematics to HumanoidDynamicMultiBody.h.
+	* include/dynamicsJRLJapan/HumanoidDynamicMultiBody.h: 
+	Adding InverseKinematics.
+	* src/CMakeLists.txt:
+	Compiling InverseKinematics .
+	* src/DynamicMultiBody.cpp: 
+	Code cleaning.
+	* src/HumanoidDynamicMultiBody.cpp: 
+	Adding instantce of HumanoidDynamicMultibody.
+
+2009-06-09  Olivier Stasse  <olivier.stasse@aist.go.jp>
+
 	HumanoidDynamicMultiBody augmented with HRPSpecificities interface.
 	* include/dynamicsJRLJapan/HumanoidDynamicMultiBody.h:
 	Adding HRPSpecificities interface.
